edit bot settings